# jabberd2

./: .gitignore  .travis.yml  AUTHORS  BUGS  CNAME  ChangeLog  Doxyfile.in  Makefile.am  NEWS  README  README.config  README.md  README.mesh  README.protocol  README.win32  TODO  TODO.vHosts  UPGRADE  acinclude.m4  bootstrap  configure.ac  configure.in  index.html  jabberd2.pro  jabberd3.pro  license-header  meson.build  style.css
c2s/: Makefile.am  address.c  authreg.c  authreg_anon.c  authreg_ldap.c  authreg_mysql.c  authreg_pam.c  authreg_pgsql.c  authreg_pipe.c  authreg_sqlite.c  bind.c  c2s.c  c2s.h  main.c  meson.build  pbx.c  pbx_commands.c  sm.c
contrib/: cyrus-sasl-digest-md5-fix.diff  gsasl-charset-validate-fix.diff  gsasl-token-printer-fix.diff  gsasl_digest-md5-server-patch.diff  patch-flash-v2  xep0227dump-mysql.py
contrib/debian/: README.Debian  changelog  control  copyright  jabberd2-authreg-anon.install  jabberd2-authreg-db.install  jabberd2-authreg-ldap.install  jabberd2-authreg-mysql.install  jabberd2-authreg-pam.install  jabberd2-authreg-pam.jabberd.pam  jabberd2-authreg-pam.postinst  jabberd2-authreg-pam.postrm  jabberd2-authreg-pgsql.install  jabberd2-authreg-pipe.install  jabberd2-authreg-sqlite.install  jabberd2-c2s.default  jabberd2-c2s.examples  jabberd2-c2s.init  jabberd2-c2s.install  jabberd2-c2s.manpages  jabberd2-common.postinst  jabberd2-common.postrm  jabberd2-resolver.default  jabberd2-resolver.examples  jabberd2-resolver.init  jabberd2-resolver.install  jabberd2-resolver.manpages  jabberd2-router.default  jabberd2-router.examples  jabberd2-router.init  jabberd2-router.install  jabberd2-router.manpages  jabberd2-s2s.default  jabberd2-s2s.examples  jabberd2-s2s.init  jabberd2-s2s.install  jabberd2-s2s.manpages  jabberd2-sm.default  jabberd2-sm.examples  (+14 more)
doc/: layout
docs/: layout
etc/: Makefile.am  c2s.xml.dist.in  jabberd-c2s.conf.in  jabberd-c2s.service.in  jabberd-router.conf.in  jabberd-router.service.in  jabberd-s2s.conf.in  jabberd-s2s.service.in  jabberd-sm.conf.in  jabberd-sm.service.in  jabberd.cfg.dist.in  jabberd.service.in  resolver.xml.dist.in  router-filter.xml.dist.in  router-users.xml.dist.in  router.xml.dist.in  s2s.xml.dist.in  sm.xml.dist.in  storage.xml.dist.in
etc/templates/: .cvsignore  Makefile.am  roster.xml.dist.in
expat/: Makefile.am  expat_config.h
gc/: bdw-gc.pc
lib/: Makefile.am  access.c  access.h  base64.c  base64.h  config.c  config.h  crypt_blowfish.c  crypt_blowfish.h  datetime.c  datetime.h  hex.c  hex.h  inaddr.c  inaddr.h  jid.c  jid.h  jqueue.c  jqueue.h  jsignal.c  jsignal.h  log.c  log.h  md5.h  miniz.c  misc.c  misc.h  nad.c  nad.h  pool.c  pool.h  pqueue.h  rate.c  rate.h  sdsalloc.h  serial.c  serial.h  sha1.c  sha1.h  stanza.c  (+15 more)
man/: Makefile.am  c2s.8.in  jabberd.8.in  router.8.in  s2s.8.in  sm.8.in
mio/: Makefile.am  meson.build  mio.c  mio.h  mio_epoll.h  mio_impl.h  mio_kqueue.c  mio_kqueue.h  mio_poll.h  mio_select.c  mio_select.h  mio_wsasync.c  mio_wsasync.h
mod/: Makefile.am  bus.c  example.c
resolver/: Makefile.am  dns.c  resolver.c  resolver.h
router/: Makefile.am  aci.c  filter.c  main.c  meson.build  remote-routers.c  router.c  router.h  user.c
s2s/: .cvsignore  Makefile.am  db.c  in.c  main.c  meson.build  out.c  router.c  s2s.h  util.c
scod/: mech_digest_md5.c  scod.h
sm/: .cvsignore  Makefile.am  aci.c  dispatch.c  feature.c  main.c  meson.build  mm.c  mod_active.c  mod_amp.c  mod_announce.c  mod_deliver.c  mod_disco.c  mod_disco_publish.c  mod_echo.c  mod_help.c  mod_iq_last.c  mod_iq_ping.c  mod_iq_private.c  mod_iq_time.c  mod_iq_vcard.c  mod_iq_version.c  mod_offline.c  mod_pep.c  mod_presence.c  mod_privacy.c  mod_roster.c  mod_roster_publish.c  mod_session.c  mod_status.c  mod_template_roster.c  mod_vacation.c  mod_validate.c  mod_verify.c  object.c  pkt.c  pres.c  sess.c  sm.c  sm.h  (+9 more)
src/: Makefile.am  bus.c  command.h  conf.c  conf.h  functions.h  main.c  module.c  module.h
storage/: Makefile.am  authreg_anon.c  authreg_db.c  authreg_ldap.c  authreg_ldapfull.c  authreg_mysql.c  authreg_ntlogon.c  authreg_oracle.c  authreg_pam.c  authreg_pgsql.c  authreg_pipe.c  authreg_sqlite.c  authreg_sspi.c  main.c  meson.build  object.c  storage.c  storage.h  storage_db.c  storage_fs.c  storage_ldapvcard.c  storage_mysql.c  storage_oracle.c  storage_pgsql.c  storage_sqlite.c
subst/: Makefile.am  dirent.c  dirent.h  getopt.c  getopt.h  gettimeofday.c  inet_aton.c  inet_ntop.c  inet_pton.c  ip6_misc.h  snprintf.c  strndup.c  subst.h  syslog.c  syslog.h  timegm.c
sx/: Makefile.am  ack.c  address.c  callback.c  chain.c  client.c  compress.c  compress.h  env.c  error.c  io.c  meson.build  plugins.h  sasl.c  sasl.h  sasl_cyrus.c  sasl_cyrus.h  sasl_gsasl.c  sasl_scod.c  server.c  ssl.c  ssl.h  sx.c  sx.h  websocket.c
sx/scod/: Makefile.am  mech_anonymous.c  mech_digest_md5.c  mech_plain.c  scod.c
tests/: Makefile.am  check_config.c  check_nad.c  check_xconfig.c  empty.xml  failed_to_load_002.xml  failed_to_load_003.xml  failed_to_load_004.xml  main.c
tests/config/: Makefile.am  Makefile.in  config_test.cpp  test_config.xml
tests/config/test_configs/: includeme2.xml  test_config.xml
tools/: .cvsignore  Makefile.am  bdb2mysql.rb  bdbdump.pl  db-jd14-2-jd2.sql  db-setup-status.mysql  db-setup.mysql  db-setup.oracle  db-setup.pgsql  db-setup.sqlite  db-update.pgsql  db-update.sqlite  git  jabberd-authpipe-pam-0.1.pl  jabberd.in  jabberd.rc  jabberd2.schema  migrate-jd14dir-2-sqlite.pl  migrate.pl  mkrelease.sh  pam_jabberd
trunk/: AUTHORS  BUGS  COPYING  NEWS  PROTOCOL  README.win32  UPGRADE  acinclude.m4  configure.ac  configure.in
util/: Makefile.am  access.c  base64.c  base64.h  config.c  crypt_blowfish.c  crypt_blowfish.h  datetime.c  datetime.h  hex.c  inaddr.c  inaddr.h  jid.c  jid.h  jqueue.c  jsignal.c  log.c  log.h  md5.c  md5.h  meson.build  misc.h  nad.c  nad.h  ow-crypt.h  pool.c  pool.h  pqueue.c  pqueue.h  rate.c  serial.c  sha1.c  sha1.h  stanza.c  str.c  uri.h  util.h  util_compat.h  wrapper.c  xconfig.c  (+5 more)
win32/: jabberd2.rc  jabberd2.sln
(+265 files in other folders)
